modified:   cmd/.env modified:   test/service_test.go

--- a/cmd/.env
+++ b/cmd/.env
@@ -1,6 +1,6 @@
-DBUSER=postgres
-DBPASS='manyahle1234$@'
-DBNET=tcp
-DBADR='127.0.0.1:3306'
-DBHOST=localhost
-DBPORT=5432
+DBUSER=
+DBPASS=
+DBNET=
+DBADR=
+DBHOST=
+DBPORT=
